--- a/server/utils/template/resetPassword.html
+++ b/server/utils/template/resetPassword.html
@@ -373,12 +373,12 @@
                     <tr>
                       <td>
                         <h3>Hola {%name%}</h3>
-                        <h2>Reestablecimiento de contraseña</h2>
+                        <h2>Restablecimiento de contraseña</h2>
                         <h4>{%content%}</h4>
                       </td>
                     </tr>
                     <tr class="btn a">
-                      <a href="{%url%}">Reestablecer contraseña</a>
+                      <a href="{%url%}">Restablecer contraseña</a>
                     </tr>
                   </table>
                 </td>
